Client Server connection works and GUI is being updated correctly